<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvSignTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ac_sign_in"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvForgetPasswordError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/reset_password_message"
        android:textColor="@color/red"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/edSignEmail"
        app:layout_constraintStart_toStartOf="@id/edSignEmail"
        app:layout_constraintTop_toBottomOf="@id/tvSignTitle" />

    <EditText
        android:id="@+id/edSignEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/tvForgetPasswordError"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edSignPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/edSignEmail"
        tools:ignore="Autofill" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btnSignInGoogle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_in_google"
        app:buttonSize="standard"
        app:layout_constraintEnd_toEndOf="@id/edSignPassword"
        app:layout_constraintStart_toStartOf="@id/edSignPassword"
        app:layout_constraintTop_toBottomOf="@id/edSignPassword" />

    <Button
        android:id="@+id/btnSignUpIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sign_up_action"
        app:layout_constraintEnd_toEndOf="@id/btnSignInGoogle"
        app:layout_constraintStart_toStartOf="@id/btnSignInGoogle"
        app:layout_constraintTop_toBottomOf="@id/btnSignInGoogle" />

    <Button
        android:id="@+id/btnForgetPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/forget_password"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/btnSignUpIn"
        app:layout_constraintStart_toStartOf="@id/btnSignUpIn"
        app:layout_constraintTop_toBottomOf="@id/btnSignUpIn" />


</androidx.constraintlayout.widget.ConstraintLayout>